[package]
name = "pipeline-macro"
description = "A crate to create a pipeline in Rust"
version = "0.1.0"
license = "MIT"
authors = ["Cedric Legendre <cedric.legendre@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
