[package]
name = "pipeline-macro"
description = "A crate to create a pipeline in Rust"
version = "0.1.3"
license = "MIT"
authors = ["Cedric Legendre <cedric.legendre@epitech.eu>"]
edition = "2018"
repository = "https://github.com/Cackbone/pipeline-macro/tree/master"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
